# BookWorm-Engineer

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  PROGRESS.md  README.md  agent.py  pyproject.toml  requirements.txt  tools.py
.bookworm/chats/: d6d096c1-9c71-4cd7-aba2-93150bf1a1cb.json
.bookworm/threads/: d6d096c1-9c71-4cd7-aba2-93150bf1a1cb.json
.cursor/plans/: gui_remaining_features_73744521.plan.md  markdown_render_upgrade_f7bbcb4c.plan.md
.cursor/rules/: conda_env.md
bookworm/: __init__.py  __main__.py  agent.py  agent_events.py  cli.py  commands.py  config.py  debug_session_log.py  llm.py  prompts.py  tools.py
bookworm/gui/: README.md  __init__.py  agent_runner.py  ask_user_bridge.py  build_ui.py  chat_panel.py  config.py  design.md  feature-list.json  feature-list.md  main_window.py  markdown_renderer.py  qt-designer-schema.xml  qt_message_filter.py  rename-plan.md  themes.py  thread_panel.py
bookworm/paper2code/: artifacts.py  pdf.py  pipeline.py  prompts.py  validation.py
docs/: BookWorm Engineer API Map and Expansion Guide.md  BookWorm Engineer API Map.md  Notebooklm_Refactor.docx  adding-a-new-api-or-feature.md  cli-apis.md  common-mistakes-to-avoid.md  expansion-decision-guide.md  external-apis.md  final-summary.md  gui-feat-user-interface-enhanced-walkthrough.md  high-level-architecture.md  internal-apis.md  purpose.md  quick-reference-table.md  recommended-file-ownership.md  safety-rules-for-future-expansion.md  tool-apis.md
specs/: mission.md  roadmap.md  tech-stack.md
tests/: test_agent_events.py  test_agent_gui.py  test_chat_store.py  test_cli.py  test_commands.py  test_config.py  test_embeddings.py  test_gui.py  test_indexer.py  test_markdown_renderer.py  test_paper2code_robustness.py  test_retriever.py
(+40 files in other folders)
