[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "bookworm-engineer"
version = "0.1.0"
description = "AI coding agent inspired by NotebookLM and opencode"
requires-python = ">=3.10"
dependencies = [
    "langchain-openrouter",
    "python-dotenv",
    "langchain",
    "langchain-chroma",
    "langchain-huggingface",
    "langchain-text-splitters",
    "chromadb",
    "sentence-transformers",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = [
    "tests",
]
norecursedirs = [
    ".pytest-tmp",
    "pytest_tmp",
    "_scratch",
    "__pycache__",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bookworm*"]

[project.scripts]
bookworm = "bookworm.cli:main"
